src/materialization/snapshots/estuary__materialization__sql__test__ddl_is_generated_for_posgres_with_composit_primary_keys.snap
---
source: src/materialization/sql.rs
expression: schema
---
/* This SQL has been generated automatically by flowctl for a materialization of the Flow Collection 'my_test/collection' to the target 'testMaterialization' */

BEGIN;

/* This table holds the checkpoints for all of the consumers for all materializations targeting this database. */
CREATE TABLE IF NOT EXISTS gazette_checkpoints (shard_fqn TEXT NOT NULL PRIMARY KEY, fence BIGINT NOT NULL, checkpoint BYTEA NOT NULL);

/* This table holds the configuration objects for all materializations to this target system. The configuration that gets persisted here is generated automatically by flowctl, and will be used by the flow-consumer at runtime to determine which fields should be projected into the table. */
CREATE TABLE IF NOT EXISTS flow_materializations (table_name TEXT NOT NULL PRIMARY KEY, config_json JSON);
INSERT INTO flow_materializations (table_name, config_json) VALUES ('test_postgres_table', '{"collection":"my_test/collection","fields":[{"field":"intCol","locationPtr":"/intCol","primaryKey":true},{"field":"numCol","locationPtr":"/numCol","primaryKey":true},{"field":"boolCol","locationPtr":"/boolCol","primaryKey":false},{"field":"objCol","locationPtr":"/objCol","primaryKey":false},{"field":"arrayCol","locationPtr":"/arrayCol","primaryKey":false},{"field":"intColNullable","locationPtr":"/intColNullable","primaryKey":false},{"field":"numColNullable","locationPtr":"/numColNullable","primaryKey":false},{"field":"boolColNullable","locationPtr":"/boolColNullable","primaryKey":false},{"field":"objColNullable","locationPtr":"/objColNullable","primaryKey":false},{"field":"arrayColNullable","locationPtr":"/arrayColNullable","primaryKey":false},{"field":"basicString","locationPtr":"/basicString","primaryKey":false},{"field":"basicStringNullable","locationPtr":"/basicStringNullable","primaryKey":false},{"field":"base64String","locationPtr":"/base64String","primaryKey":false},{"field":"base64StringNullable","locationPtr":"/base64StringNullable","primaryKey":false}]}');

/* Materialization of Estuary collection 'my_test/collection', intended for postgres target 'testMaterialization' */
CREATE TABLE IF NOT EXISTS "test_postgres_table" (
	/* user provided projection of JSON at: /intCol with inferred types: [integer] */
	"intCol" BIGINT NOT NULL,

	/* user provided projection of JSON at: /numCol with inferred types: [integer] */
	"numCol" BIGINT NOT NULL,

	/* user provided projection of JSON at: /boolCol with inferred types: [boolean] */
	"boolCol" BOOLEAN NOT NULL,

	/* user provided projection of JSON at: /objCol with inferred types: [object] */
	"objCol" JSON NOT NULL,

	/* user provided projection of JSON at: /arrayCol with inferred types: [array] */
	"arrayCol" JSON NOT NULL,

	/* user provided projection of JSON at: /intColNullable with inferred types: [integer, null] */
	"intColNullable" BIGINT,

	/* user provided projection of JSON at: /numColNullable with inferred types: [null, number] */
	"numColNullable" DOUBLE PRECISION,

	/* user provided projection of JSON at: /boolColNullable with inferred types: [boolean, null] */
	"boolColNullable" BOOLEAN,

	/* user provided projection of JSON at: /objColNullable with inferred types: [null, object] */
	"objColNullable" JSON,

	/* user provided projection of JSON at: /arrayColNullable with inferred types: [array, null] */
	"arrayColNullable" JSON,

	/* user provided projection of JSON at: /basicString with inferred types: [string] */
	"basicString" TEXT NOT NULL,

	/* user provided projection of JSON at: /basicStringNullable with inferred types: [null, string] */
	"basicStringNullable" TEXT,

	/* user provided projection of JSON at: /base64String with inferred types: [string] */
	"base64String" BYTEA NOT NULL,

	/* user provided projection of JSON at: /base64StringNullable with inferred types: [null, string] */
	"base64StringNullable" BYTEA,
	/* This column holds the complete document from the Flow Collection, with all reduction annotations applied. It is added automatically to all materializations. */
	/* auto-generated projection of JSON at: / with inferred types: [object] */
	"flow_document" JSON NOT NULL,

	PRIMARY KEY("intCol", "numCol")
);

COMMIT;

