src/materialization/snapshots/estuary__materialization__sql__test__ddl_is_generated_for_sqlite_with_composit_primary_keys.snap
---
source: src/materialization/sql.rs
expression: schema
---
/* This SQL has been generated automatically by flowctl for a materialization of the Flow Collection 'my_test/collection' to the target 'testMaterialization' */

BEGIN;

/* This table holds the checkpoints for all of the consumers for all materializations targeting this database. */
CREATE TABLE IF NOT EXISTS gazette_checkpoints (shard_fqn TEXT NOT NULL PRIMARY KEY, fence INTEGER NOT NULL, checkpoint BLOB NOT NULL);

/* This table holds the configuration objects for all materializations to this target system. The configuration that gets persisted here is generated automatically by flowctl, and will be used by the flow-consumer at runtime to determine which fields should be projected into the table. */
CREATE TABLE IF NOT EXISTS flow_materializations (table_name TEXT NOT NULL PRIMARY KEY, config_json TEXT);
INSERT INTO flow_materializations (table_name, config_json) VALUES ('test_sqlite_table', '{"name":"my_test/collection","schema_uri":"test://test/schema.json","key_ptrs":["/anything"],"projections":[{"ptr":"/intCol","field":"intCol","user_provided":true,"is_partition_key":false,"is_primary_key":true,"inference":{"types":["integer"],"must_exist":true}},{"ptr":"/numCol","field":"numCol","user_provided":true,"is_partition_key":false,"is_primary_key":true,"inference":{"types":["integer"],"must_exist":true}},{"ptr":"/boolCol","field":"boolCol","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["boolean"],"must_exist":true}},{"ptr":"/objCol","field":"objCol","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["object"],"must_exist":true}},{"ptr":"/arrayCol","field":"arrayCol","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["array"],"must_exist":true}},{"ptr":"/intColNullable","field":"intColNullable","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["integer","null"],"must_exist":true}},{"ptr":"/numColNullable","field":"numColNullable","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["null","number"],"must_exist":true}},{"ptr":"/boolColNullable","field":"boolColNullable","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["boolean","null"],"must_exist":true}},{"ptr":"/objColNullable","field":"objColNullable","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["null","object"],"must_exist":true}},{"ptr":"/arrayColNullable","field":"arrayColNullable","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["array","null"],"must_exist":true}},{"ptr":"/basicString","field":"basicString","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["string"],"must_exist":true,"string":{"is_base64":false}}},{"ptr":"/basicStringNullable","field":"basicStringNullable","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["null","string"],"must_exist":true,"string":{"is_base64":false}}},{"ptr":"/base64String","field":"base64String","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["string"],"must_exist":true,"string":{"is_base64":true}}},{"ptr":"/base64StringNullable","field":"base64StringNullable","user_provided":true,"is_partition_key":false,"is_primary_key":false,"inference":{"types":["null","string"],"must_exist":true,"string":{"is_base64":true}}}]}');

/* Materialization of Estuary collection 'my_test/collection', intended for sqlite target 'testMaterialization' */
CREATE TABLE IF NOT EXISTS "test_sqlite_table" (
	/* user provided projection of JSON at: /intCol with inferred types: [integer] */
	"intCol" INTEGER NOT NULL,

	/* user provided projection of JSON at: /numCol with inferred types: [integer] */
	"numCol" INTEGER NOT NULL,

	/* user provided projection of JSON at: /boolCol with inferred types: [boolean] */
	"boolCol" BOOLEAN NOT NULL,

	/* user provided projection of JSON at: /objCol with inferred types: [object] */
	"objCol" TEXT NOT NULL,

	/* user provided projection of JSON at: /arrayCol with inferred types: [array] */
	"arrayCol" TEXT NOT NULL,

	/* user provided projection of JSON at: /intColNullable with inferred types: [integer, null] */
	"intColNullable" INTEGER,

	/* user provided projection of JSON at: /numColNullable with inferred types: [null, number] */
	"numColNullable" REAL,

	/* user provided projection of JSON at: /boolColNullable with inferred types: [boolean, null] */
	"boolColNullable" BOOLEAN,

	/* user provided projection of JSON at: /objColNullable with inferred types: [null, object] */
	"objColNullable" TEXT,

	/* user provided projection of JSON at: /arrayColNullable with inferred types: [array, null] */
	"arrayColNullable" TEXT,

	/* user provided projection of JSON at: /basicString with inferred types: [string] */
	"basicString" TEXT NOT NULL,

	/* user provided projection of JSON at: /basicStringNullable with inferred types: [null, string] */
	"basicStringNullable" TEXT,

	/* user provided projection of JSON at: /base64String with inferred types: [string] */
	"base64String" BLOB NOT NULL,

	/* user provided projection of JSON at: /base64StringNullable with inferred types: [null, string] */
	"base64StringNullable" BLOB,
	/* This column holds the complete document from the Flow Collection, with all reduction annotations applied. It is added automatically to all materializations. */
	/* auto-generated projection of JSON at: / with inferred types: [object] */
	"flow_document" TEXT NOT NULL,

	PRIMARY KEY("intCol", "numCol")
);

COMMIT;

